# mtg-sorter

./: Cargo.toml
frontend/: README.md  package-lock.json  package.json  upload_success.html  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: App.tsx
frontend/src/pages/technology/: index.tsx
frontend/src/pages/upload_success/: index.tsx
src/: main.rs
