[package]
name = "delver_sorter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
